# crosscompiling-fortran-for-window-using-dockcross

./: CMakeLists.txt  LICENSE  README.md
executable/: CMakeLists.txt
executable_with_sharedlib/: CMakeLists.txt  helloworld.f90  main.cxx
